chore: cleanup, test coverage and prepare for deployment with README and .env

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 DATABASE_URL=postgres://postgres:root@localhost:5432/bitwise-identify-db
+DB_USER=postgres
+DB_PASSWORD=root
+DB_NAME=bitwise-identify-db
+DB_HOST=localhost
+DB_PORT=5432
