--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DATABASE_URL=postgres://postgres:root@localhost:5432/bitwise-identify-db
-DB_USER=postgres
-DB_PASSWORD=root
-DB_NAME=bitwise-identify-db
-DB_HOST=localhost
+DATABASE_URL=postgresql://identify_db_user:VWWiHUb2A6uliahiX3gj3iidzlpVYgBr@dpg-d19e44ndiees73as70r0-a.oregon-postgres.render.com/identify_db
+DB_USER=identify_db_user
+DB_PASSWORD=VWWiHUb2A6uliahiX3gj3iidzlpVYgBr
+DB_NAME=identify_db
+DB_HOST=dpg-d19e44ndiees73as70r0-a.oregon-postgres.render.com
 DB_PORT=5432
